test/fail_compilation/contravariance.cx
module contravariance;

macro import cx.macros.assert;

class A {
    this() { }
    void set(A a) { }
}

class B : A {
    this() { }
    override void set(B b) { }
}

void main() { }
